[package]
name = "classicube-relay"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
byteorder = "1"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
lazy_static = "1"
thiserror = "1"
tracing = "0.1"

[features]
ci = []

[dev-dependencies]
tracing-subscriber = "0.2"
