[package]
name = "classicube-relay"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
byteorder = "1"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
lazy_static = "1"
thiserror = "2"
tracing = "0.1"

[features]
ci = []

[dev-dependencies]
classicube-sys = "=4.3.0+ClassiCube.1.3.7"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
